add book button now adds books to page

--- a/style.css
+++ b/style.css
@@ -1,10 +1,36 @@
+p{
+    padding: 0px;
+    margin: 0px;
+}
+h1{
+    margin: 0px;
+}
+
+#header{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 2px solid gray;
+    display: flex;
+    justify-content: center
+}
+#add-book-button{
+    margin-top: 20px;
+    height: 50px;
+    width: 120px;
+    font-size: 20px;
+}
+
 #main{
+    background-color: ;
     display: flex;
     flex-direction:column;
     align-items: center;
 }
 
 #book-form{
+    margin-top: 10px;
+    padding-bottom: 10px;
+    border: 2px solid rgb(177, 176, 176);
     flex-direction: column;
     align-items: center;
 }
@@ -18,9 +44,16 @@
     display: flex;
     
 }
-.book-grid-container{
-    color: blue;
+#book-grid-container{
+    column-gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 .book-card{
-    columns: blue;
+    margin-top: 20px;
+    padding: 10px 10px;
+    border: 2px solid rgb(66, 66, 66);
+    width: 200px;
+    flex: 1;
 }
