--- a/style.css
+++ b/style.css
@@ -1,36 +1,51 @@
+
 p{
     padding: 0px;
     margin: 0px;
 }
-h1{
+h1, h2{
     margin: 0px;
 }
 
 #header{
     padding-top: 10px;
     padding-bottom: 10px;
-    border-bottom: 2px solid gray;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;;
     display: flex;
-    justify-content: center
+    justify-content: center;
 }
-#add-book-button{
-    margin-top: 20px;
+#show-form-button{
+    border: none;
+    border-radius: 5px;
+    background-color: rgb(226, 226, 226);
+    margin-top: 40px;
     height: 50px;
-    width: 120px;
-    font-size: 20px;
-}
+    width: 150px;
+    font-size: 24px;
+} 
 
 #main{
-    background-color: ;
     display: flex;
     flex-direction:column;
     align-items: center;
 }
 
-#book-form{
-    margin-top: 10px;
+#book-form-dialog{
+    height: 260px;
+    width: 250px;
+    margin-top: 200px;
     padding-bottom: 10px;
     border: 2px solid rgb(177, 176, 176);
+}
+#book-form-dialog::backdrop{
+    background-color: rgba(0, 0, 0, 0.5);
+}
+#book-form-dialog h2{
+    margin-bottom: 10px;
+}
+
+#book-form-container{
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
@@ -38,22 +53,53 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+}
+#book-title, #book-author, #book-pages{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 230px;
+    height: 30px;
+    border: 2px solid rgb(192, 192, 192);
+    border-radius: 5px;
 }
 #book-read-label{
     display: flex;
-    
+    align-items: center;
+    font-size: 20px;
+    display: flex;  
+    margin-bottom: 5px;
 }
-#book-grid-container{
+#book-read{
+    height: 30px;
+    width: 20px;
+}
+#form-button-container{
+    column-gap: 5px;
+    display: flex;
+}
+#form-submit-button, #form-cancel-button{
+    border: none;
+    color: white;
+    flex-grow: 1;
+    width: 114px;
+    height: 35px;
+}
+#form-submit-button{
+    background-color: rgb(46, 143, 46);
+}
+#form-cancel-button{
+    background-color: rgb(183, 39, 39);
+}
+/* #book-grid-container{
     column-gap: 10px;
     display: flex;
     flex-wrap: wrap;
     
-}
-.book-card{
+} */
+/* .book-card{
     margin-top: 20px;
     padding: 10px 10px;
     border: 2px solid rgb(66, 66, 66);
     width: 200px;
     flex: 1;
-}
+}  */
