--- a/style.css
+++ b/style.css
@@ -97,11 +97,12 @@ h1, h2{
     background-color: rgb(183, 39, 39);
 }
 #book-grid-container{
-    justify-content: space-evenly;
+    justify-content: space-evenly; 
     display: flex;
     flex-wrap: wrap;
 } 
 .book-card{
+    margin: 10px 20px;
     line-height: 50px;
     display: flex;
     flex-direction: column;
@@ -109,10 +110,21 @@ h1, h2{
     font-size: 28px ;
     border-radius: 8px ;
     background-color: rgb(231, 231, 231);
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     margin-top: 40px;
     padding: 10px 10px;
-    width: 300px;
     min-width: 300px;
     height: 200px;
 } 
+.read-button{
+    background-color: lightcoral;
+    font-size: 24px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 5px;
+    height: 45px;
+    width: 300px;
+}
+.read-button.on{
+    background-color: lightgreen;
+}
